`improve` replace 문자 변경

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 {% load render_bundle from webpack_loader %}
 
 {% block title %}
-  <title>$$$$$</title>
+  <title>#####</title>
 {% endblock %}
 
 {% block stylebase %}
-  {% render_bundle "$$$$$" attrs="defer" %}
+  {% render_bundle "#####" attrs="defer" %}
 {% endblock %}
 
 {% block content %}
